src/main/gen/com/paulmethfessel/wtfintellij/lang/WtfParser.java
// This is a generated file. Not intended for manual editing.
package com.paulmethfessel.wtfintellij.lang;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.paulmethfessel.wtfintellij.lang.psi.WtfTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class WtfParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return wtfFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(CALL_STMT, RETURN_STMT, STMT, VARIABLE_ASSIGNMENT_STMT,
      VARIABLE_DECLARATION_STMT),
    create_token_set_(BINARY_EXPR, CALL_EXPR, CONSTRUCTOR_EXPR, EXPR,
      LITERAL_EXPR, PARENTHESIZED_EXPR, REFERENCE_EXPR, UNARY_EXPR),
  };

  /* ********************************************************** */
  // PLUS | MINUS | SLASH | STAR | AND | OR | LT | LE | GT | GE | EQUAL | NOT_EQUAL
  static boolean binary_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binary_operator")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, SLASH);
    if (!r) r = consumeToken(b, STAR);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LE);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GE);
    if (!r) r = consumeToken(b, EQUAL);
    if (!r) r = consumeToken(b, NOT_EQUAL);
    return r;
  }

  /* ********************************************************** */
  // (expr nl? (COMMA nl? expr nl?)? COMMA?)?
  static boolean call_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args")) return false;
    call_args_0(b, l + 1);
    return true;
  }

  // expr nl? (COMMA nl? expr nl?)? COMMA?
  private static boolean call_args_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1, -1);
    r = r && call_args_0_1(b, l + 1);
    r = r && call_args_0_2(b, l + 1);
    r = r && call_args_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean call_args_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args_0_1")) return false;
    nl(b, l + 1);
    return true;
  }

  // (COMMA nl? expr nl?)?
  private static boolean call_args_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args_0_2")) return false;
    call_args_0_2_0(b, l + 1);
    return true;
  }

  // COMMA nl? expr nl?
  private static boolean call_args_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && call_args_0_2_0_1(b, l + 1);
    r = r && expr(b, l + 1, -1);
    r = r && call_args_0_2_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean call_args_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args_0_2_0_1")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean call_args_0_2_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args_0_2_0_3")) return false;
    nl(b, l + 1);
    return true;
  }

  // COMMA?
  private static boolean call_args_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args_0_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // function_call_name nl? '(' nl? call_args nl? ')'
  public static boolean call_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_expr")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_call_name(b, l + 1);
    r = r && call_expr_1(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && call_expr_3(b, l + 1);
    r = r && call_args(b, l + 1);
    r = r && call_expr_5(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, CALL_EXPR, r);
    return r;
  }

  // nl?
  private static boolean call_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_expr_1")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean call_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_expr_3")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean call_expr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_expr_5")) return false;
    nl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // call_expr
  public static boolean call_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_stmt")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = call_expr(b, l + 1);
    exit_section_(b, m, CALL_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // (constructor_argument nl? (COMMA nl? constructor_argument nl?)*)?
  static boolean constructor_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_args")) return false;
    constructor_args_0(b, l + 1);
    return true;
  }

  // constructor_argument nl? (COMMA nl? constructor_argument nl?)*
  private static boolean constructor_args_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_args_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = constructor_argument(b, l + 1);
    r = r && constructor_args_0_1(b, l + 1);
    r = r && constructor_args_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean constructor_args_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_args_0_1")) return false;
    nl(b, l + 1);
    return true;
  }

  // (COMMA nl? constructor_argument nl?)*
  private static boolean constructor_args_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_args_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!constructor_args_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constructor_args_0_2", c)) break;
    }
    return true;
  }

  // COMMA nl? constructor_argument nl?
  private static boolean constructor_args_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_args_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && constructor_args_0_2_0_1(b, l + 1);
    r = r && constructor_argument(b, l + 1);
    r = r && constructor_args_0_2_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean constructor_args_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_args_0_2_0_1")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean constructor_args_0_2_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_args_0_2_0_3")) return false;
    nl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // constructor_argument_name ':' expr
  public static boolean constructor_argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_argument")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = constructor_argument_name(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && expr(b, l + 1, -1);
    exit_section_(b, m, CONSTRUCTOR_ARGUMENT, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean constructor_argument_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_argument_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CONSTRUCTOR_ARGUMENT_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // named_identifier nl? '{' nl? constructor_args nl? '}'
  public static boolean constructor_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_expr")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = named_identifier(b, l + 1);
    r = r && constructor_expr_1(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && constructor_expr_3(b, l + 1);
    r = r && constructor_args(b, l + 1);
    r = r && constructor_expr_5(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, m, CONSTRUCTOR_EXPR, r);
    return r;
  }

  // nl?
  private static boolean constructor_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_expr_1")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean constructor_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_expr_3")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean constructor_expr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_expr_5")) return false;
    nl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // use_declaration | record_declaration | resource_declaration | enum_declaration | variant_declaration | func_declaration
  static boolean declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration")) return false;
    boolean r;
    r = use_declaration(b, l + 1);
    if (!r) r = record_declaration(b, l + 1);
    if (!r) r = resource_declaration(b, l + 1);
    if (!r) r = enum_declaration(b, l + 1);
    if (!r) r = variant_declaration(b, l + 1);
    if (!r) r = func_declaration(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // EXPORT? ENUM enum_name nl? '{' nl? (enum_value (nl enum_value)*)? nl? '}'
  public static boolean enum_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration")) return false;
    if (!nextTokenIs(b, "<enum declaration>", ENUM, EXPORT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_DECLARATION, "<enum declaration>");
    r = enum_declaration_0(b, l + 1);
    r = r && consumeToken(b, ENUM);
    r = r && enum_name(b, l + 1);
    r = r && enum_declaration_3(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && enum_declaration_5(b, l + 1);
    r = r && enum_declaration_6(b, l + 1);
    r = r && enum_declaration_7(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // EXPORT?
  private static boolean enum_declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_0")) return false;
    consumeToken(b, EXPORT);
    return true;
  }

  // nl?
  private static boolean enum_declaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_3")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean enum_declaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_5")) return false;
    nl(b, l + 1);
    return true;
  }

  // (enum_value (nl enum_value)*)?
  private static boolean enum_declaration_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_6")) return false;
    enum_declaration_6_0(b, l + 1);
    return true;
  }

  // enum_value (nl enum_value)*
  private static boolean enum_declaration_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = enum_value(b, l + 1);
    r = r && enum_declaration_6_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (nl enum_value)*
  private static boolean enum_declaration_6_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_6_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!enum_declaration_6_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enum_declaration_6_0_1", c)) break;
    }
    return true;
  }

  // nl enum_value
  private static boolean enum_declaration_6_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_6_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = nl(b, l + 1);
    r = r && enum_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean enum_declaration_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_7")) return false;
    nl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // named_identifier
  public static boolean enum_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = named_identifier(b, l + 1);
    exit_section_(b, m, ENUM_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // named_identifier
  public static boolean enum_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_value")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = named_identifier(b, l + 1);
    exit_section_(b, m, ENUM_VALUE, r);
    return r;
  }

  /* ********************************************************** */
  // typed_identifier
  public static boolean func_argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_argument")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = typed_identifier(b, l + 1);
    exit_section_(b, m, FUNC_ARGUMENT, r);
    return r;
  }

  /* ********************************************************** */
  // nl? (func_argument (',' func_argument)*)? nl?
  static boolean func_arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arguments")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = func_arguments_0(b, l + 1);
    r = r && func_arguments_1(b, l + 1);
    r = r && func_arguments_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean func_arguments_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arguments_0")) return false;
    nl(b, l + 1);
    return true;
  }

  // (func_argument (',' func_argument)*)?
  private static boolean func_arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arguments_1")) return false;
    func_arguments_1_0(b, l + 1);
    return true;
  }

  // func_argument (',' func_argument)*
  private static boolean func_arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = func_argument(b, l + 1);
    r = r && func_arguments_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' func_argument)*
  private static boolean func_arguments_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arguments_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!func_arguments_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "func_arguments_1_0_1", c)) break;
    }
    return true;
  }

  // ',' func_argument
  private static boolean func_arguments_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arguments_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && func_argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean func_arguments_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arguments_2")) return false;
    nl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // nl? (stmt (nl stmt)*)? nl?
  public static boolean func_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNC_BODY, "<func body>");
    r = func_body_0(b, l + 1);
    r = r && func_body_1(b, l + 1);
    r = r && func_body_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // nl?
  private static boolean func_body_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_body_0")) return false;
    nl(b, l + 1);
    return true;
  }

  // (stmt (nl stmt)*)?
  private static boolean func_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_body_1")) return false;
    func_body_1_0(b, l + 1);
    return true;
  }

  // stmt (nl stmt)*
  private static boolean func_body_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_body_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = stmt(b, l + 1);
    r = r && func_body_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (nl stmt)*
  private static boolean func_body_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_body_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!func_body_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "func_body_1_0_1", c)) break;
    }
    return true;
  }

  // nl stmt
  private static boolean func_body_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_body_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = nl(b, l + 1);
    r = r && stmt(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean func_body_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_body_2")) return false;
    nl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // EXPORT? FUNC nl? function_name nl? '(' func_arguments ')' nl? ('->' nl? type_identifier)? nl? '{' func_body '}'
  public static boolean func_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration")) return false;
    if (!nextTokenIs(b, "<func declaration>", EXPORT, FUNC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNC_DECLARATION, "<func declaration>");
    r = func_declaration_0(b, l + 1);
    r = r && consumeToken(b, FUNC);
    r = r && func_declaration_2(b, l + 1);
    r = r && function_name(b, l + 1);
    r = r && func_declaration_4(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && func_arguments(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && func_declaration_8(b, l + 1);
    r = r && func_declaration_9(b, l + 1);
    r = r && func_declaration_10(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && func_body(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // EXPORT?
  private static boolean func_declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_0")) return false;
    consumeToken(b, EXPORT);
    return true;
  }

  // nl?
  private static boolean func_declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_2")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean func_declaration_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_4")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean func_declaration_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_8")) return false;
    nl(b, l + 1);
    return true;
  }

  // ('->' nl? type_identifier)?
  private static boolean func_declaration_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_9")) return false;
    func_declaration_9_0(b, l + 1);
    return true;
  }

  // '->' nl? type_identifier
  private static boolean func_declaration_9_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_9_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RIGHT_ARROW);
    r = r && func_declaration_9_0_1(b, l + 1);
    r = r && type_identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nl?
  private static boolean func_declaration_9_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_9_0_1")) return false;
    nl(b, l + 1);
    return true;
  }

  // nl?
  private static boolean func_declaration_10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_10")) return false;
    nl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean function_call_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, FUNCTION_CALL_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // named_identifier
  public static boolean function_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = named_identifier(b, l + 1);
    exit_section_(b, m, FUNCTION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // call_expr | constructor_expr | variable | parenthesized_expr
  static boolean initial_reference_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "initial_reference_expr")) return false;
    if (!nextTokenIs(b, "", IDENTIFIER, LEFT_PAREN)) return false;
    boolean r;
    r = call_expr(b, l + 1);
    if (!r) r = constructor_expr(b, l + 1);
    if (!r) r = variable(b, l + 1);
    if (!r) r = parenthesized_expr(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean named_identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "named_identifier")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, NAMED_IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // NEW_LINE+
  public static boolean nl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nl")) return false;
    if (!nextTokenIs(b, NEW_LINE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEW_LINE);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, NEW_LINE)) break;
      if (!empty_element_parsed_guard_(b, "nl", c)) break;
    }
    exit_section_(b, m, NL, r);
    return r;
  }

  /* ********************************************************** */
  // PACKAGE package_namespace ':' package_name ('@' package_version)?
  public static boolean package_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "package_declaration")) return false;
    if (!nextTokenIs(b, PACKAGE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PACKAGE);
    r = r && package_namespace(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && package_name(b, l + 1);
    r = r && package_declaration_4(b, l + 1);
    exit_section_(b, m, PACKAGE_DECLARATION, r);
    return r;
  }
